Fixed front end routing issues, and updated extra spacing on modal

--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -24,12 +24,16 @@
   border-radius: 0.50rem;
 }
 
-.signin-container {
-  // width: 300px;
-  // height: 100%;
-  margin: auto;
-  position: relative;
-  margin-top: 100px;
+// .signin-container {
+//   // width: 300px;
+//   // height: 100%;
+//   margin: auto;
+//   position: relative;
+//   margin-top: 100px;
+// }
+
+.signin-form {
+  height: 100%;
 }
 
 .signin-form-body {
@@ -98,6 +102,23 @@ input:focus {
   list-style: none;
   margin-top: 5px;
   font-size: 13px; 
+}
+
+.link-back {
+  font-family: Lato,sans-serif;
+  font-size: 16px;
+  color: #4a4a4a;
+  font-weight: 400;
+}
+
+.link-butt {
+  font-family: Lato,sans-serif;
+  font-size: 16px;
+  color: #00ab80;
+  font-weight: 400;
+  border: none;
+  background: none;
+  cursor: pointer;
 }
 
 
